<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/gtn_shortcuts_widget_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:id="@+id/gtn_shortcuts_widget_layout_container">

        <LinearLayout
            android:id="@+id/gtn_shortcuts_widget_header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gtn_toolbar_light_color"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:paddingRight="8dp"
            android:paddingEnd="8dp">

            <ImageView
                android:id="@+id/gtn_shortcuts_widget_header_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/gtn_icon"
                android:contentDescription="@string/gtn_shortcuts_widget_header_icon_description"/>

            <LinearLayout
                android:id="@+id/gtn_shortcuts_widget_header_subcontainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingBottom="4dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:paddingRight="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="4dp" >

                <TextView
                    android:id="@+id/gtn_shortcuts_widget_header_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/gtn_shortcuts_widget_header_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gtn_location_shortcuts_text"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gtn_shortcuts_widget_list" />

    </LinearLayout>
</FrameLayout>